--- a/Arsenalad/style.css
+++ b/Arsenalad/style.css
@@ -1,7 +1,8 @@
 body{
     font-family: 'Oswald', sans-serif;
-    background-image: 'https://raw.githubusercontent.com/balltenten/balltenten.github.io/master/Arsenalad/pic/squadall.jpg';  
+    background-color: crimson;
     color: white;
+    
 }
 html{
     scroll-behavior: initial;
@@ -17,7 +18,6 @@ html{
 }
 #add{
     text-align: center;
-    background-color: white;
     background-size: auto;
 }
 #submit-btn{
@@ -27,5 +27,9 @@ html{
     background-color: white;
 }
 #s-btn{
-    background-color: crimson;
+    background-color: white;
+}
+thead{
+    background-color: white;
+    color: crimson;
 }
