--- a/Arsenalad/style.css
+++ b/Arsenalad/style.css
@@ -33,3 +33,36 @@ thead{
     background-color: white;
     color: crimson;
 }
+@-webkit-keyframes color-transition {
+    0% {
+        background-color:  white;
+        border-color:  white;
+        color: crimson;
+    }
+    33% {
+        background-color:  whitesmoke;
+        border-color:  whitesmoke;
+        color: crimson;
+    }
+    66% {
+        background-color: crimson;
+        border-color: crimson;
+        color: white
+    }
+    100% {
+        background-color: crimson;
+        border-color: crimson;
+        color: white;
+    }
+}
+tbody{background-color: #CCCCCC;font-family: "Courier New", Courier, monospace;
+    -webkit-animation-name: color-transition;
+    animation-name: color-transition;
+    -webkit-animation-duration: 5s;
+    animation-duration: 5s;
+    -webkit-animation-direction: alternate;
+    animation-direction: alternate;
+    -webkit-animation-iteration-count: infinite;
+    animation-iteration-count: infinite;
+    -webkit-animation-timing-function: linear;
+    animation-timing-function: linear;}
